@@ -6,6 +6,8 @@ KERNEL_FLAVOUR = di
 KERNELVERSION = $(foreach ver,${KERNELIMAGEVERSION},$(ver))
 KERNELNAME = $(foreach ver,${KERNELVERSION},vmlinuz-$(ver))
 
+VERSIONED_SYSTEM_MAP = t
+
 USERDEVFS = t
 
 INITRD_FS = romfs
